<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp3717.readingrainbow.ShareBookSearchActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_prompt"
        android:textSize="20sp"
        android:id="@+id/search_prompt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchBookTitleInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/search_prompt"
        android:hint="@string/title"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:id="@+id/searchBookTitleButton"
        android:layout_below="@+id/searchBookTitleInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:onClick="searchByTitle"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchBookAuthorInput"
        android:layout_below="@+id/searchBookTitleButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:hint="@string/author"
        android:maxLines="1"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_author"
        android:id="@+id/searchBookAuthorButton"
        android:layout_below="@+id/searchBookAuthorInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:onClick="searchByAuthor"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchBookISBNInput"
        android:layout_below="@+id/searchBookAuthorButton"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/isbn"
        android:inputType="number"
        android:maxLines="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_isbn"
        android:id="@+id/searchBookISBNButton"
        android:layout_below="@+id/searchBookISBNInput"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:onClick="searchByISBN"/>

</RelativeLayout>
