<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp3717.readingrainbow.MenuActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_search"
        android:id="@+id/search_books_button"
        android:onClick="searchBook"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_share"
        android:id="@+id/share_book_button"
        android:onClick="shareBook"
        android:layout_below="@+id/search_books_button"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_borrowed"
        android:id="@+id/books_available_to_borrow"
        android:layout_below="@+id/share_book_button"
        android:layout_centerHorizontal="true"
        android:onClick="seeBooksMadeAvailable"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_shared"
        android:id="@+id/shared_books_button"
        android:layout_below="@+id/books_available_to_borrow"
        android:layout_centerHorizontal="true"
        android:onClick="seeBooksLentOut"/>
</RelativeLayout>
