<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp3717.readingrainbow.ShareBookActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_field"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/title"
        android:layout_marginTop="55dp"
        android:maxLines="1"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/author_field"
        android:layout_below="@+id/title_field"
        android:hint="@string/author"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/year_field"
        android:layout_below="@+id/author_field"
        android:hint="@string/year"
        android:inputType="number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        android:id="@+id/share_button"
        android:layout_below="@+id/year_field"
        android:layout_centerHorizontal="true"
        android:onClick="shareBook"/>
</RelativeLayout>
